# sitemap-parser

./: .pre-commit-config.yaml  README.md  example.py  justfile  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/py_sitemap_parser/: __init__.py
src/sitemap_parser/: __init__.py
tests/: test_parser.py
